# hello-world

./: README.md  hello.c
C/: README.md
C/C_10/include/: calc.h
C/C_10/sort/: CMakeLists.txt
C/C_10/test1/: CMakeLists.txt
C/C_10/test2/: sort.cpp
C/C_11/: CMakeLists.txt
C/C_11/calc/: mult.cpp
C/C_11/sort/: CMakeLists.txt
C/C_12/calc/: CMakeLists.txt  sub.cpp
C/C_CMake/: README.md
C/C_CMake/C_2/: main.cpp
C/C_CMake/C_7/include/: sort.h
C/C_CMake/C_7/test2/: CMakeLists.txt
C/C_CMake/C_8/test/: CMakeLists.txt
C/C_CMake/C_9/calc/: add.cpp
C/C_Makefile/: README.md
C/C_Makefile/C_2/: Makefile
C/C_omp/: README.md
C/C_omp/C_0/: omp.cpp
C/C_omp/C_1/: omp.cpp
C/C_omp/C_2/: omp.cpp
C/C_omp/C_3/: Makefile
C/C_omp/C_4/: Makefile  omp.cpp
C/C_opt/: README.md
C/C_opt/C_1/: Makefile  hello.c
C/C_opt/C_2/: Makefile  hello.c
C/C_opt/C_3/: Makefile
C/C_opt/C_4/: Makefile  opt.c
C_1/: Makefile
C_10/: CMakeLists.txt
C_10/sort/: insert.cpp
C_10/test1/: CMakeLists.txt  calc.cpp
C_11/calc/: CMakeLists.txt
C_12/calc/: div.cpp
C_12/sort/: CMakeLists.txt  insert.cpp  select.cpp
C_3/: Makefile  main.cpp  main2.cpp
C_4/: CMakeLists.txt
C_4/src/: example.cpp
C_5/: CMakeLists.txt
C_6/: CMakeLists.txt
C_7/: CMakeLists.txt
C_8/: CMakeLists.txt
C_8/include/: example.h
C_9/: CMakeLists.txt  test.cpp
